# pkgr

./: CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
src/: lib.rs  main.rs
tests/: pkgr.rs
