[package]
name = "pkgr"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/neiforfaen/pkgr"

[dev-dependencies]
tempfile = "3"

[dependencies]
cliclack = "0.5.4"
console = "0.16.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
